Polish documentation and code, particularly Stopwatch (#461 / #643)
The stopwatch extension had meager documentation, which this change
rectifies. It also improves its production, test, and demo code.

Further changes:

* make sure all extensions mention their thread-safety
* make sure `@Test` is always the first annotation
* remove double empty line before h2 headers
  (because nobody except Nicolai cares)
* remove "Introduction" header
  (it's pointless - the first paragraphs are always in intro)
* replace "--" with "-"
  (the former is correct, but harder to stick to)
* a few even smaller improvements

Closes: #461
PR: #643

--- a/docs/default-locale-timezone.adoc
+++ b/docs/default-locale-timezone.adoc
@@ -42,7 +42,7 @@ NOTE: A class-level configuration means that the specified locale is set before 
 
 == `@DefaultTimeZone`
 
-The default `TimeZone` is specified according to the https://docs.oracle.com/javase/8/docs/api/java/util/TimeZone.html#getTimeZone(java.lang.String)[TimeZone.getTimeZone(String)] method.
+The default `TimeZone` is specified according to the https://docs.oracle.com/javase/8/docs/api/java/util/TimeZone.html#getTimeZone-java.lang.String-[TimeZone.getTimeZone(String)] method.
 
 [source,java,indent=0]
 ----
