--- a/docs/issue.adoc
+++ b/docs/issue.adoc
@@ -3,8 +3,6 @@
 :xp-demo-dir: ../src/demo/java
 :demo: {xp-demo-dir}/org/junitpioneer/jupiter/IssueExtensionDemo.java
 
-== Introduction
-
 The main reason developers write tests is to ensure the functionality of a requirement or to avoid technical problems.
 The `@Issue` annotation allows marking tests with a `String`, referencing a related issue (like a requirement, or a bugfix) of an issue-tracker (like Jira or Redmine).
 
@@ -51,3 +49,7 @@ include::{demo}[tag=issue_processor_sample]
 
 NOTE: The implementing class must be registered to the Java ecosystem as a service.
 For further information about registering a service, please see the Java https://docs.oracle.com/javase/8/docs/api/java/util/ServiceLoader.html[`ServiceLoader` documentation].
+
+== Thread-Safety
+
+This extension is safe to use during https://junit.org/junit5/docs/current/user-guide/#writing-tests-parallel-execution[parallel test execution].
