Upgrade Gradle, build against Java 18/19, improve modular tests (#613, #659 / #651)
(Yes, this change does too much, but it all hangs together.)

Updates the Gradle wrapper version from 7.4 to 7.5 because that comes
with support for Java 18, which is also added to the build pipeline.
The experimental Java version is now (for another few days), Java 19.

The modular build is properly configured to really test from the
module path.

Furthermore, replaces the archived/deprecated GitHub action
sormuras/download-jdk with oracle-actions/setup-java.

Closes: #613, #659
PR: #651

--- a/docs/environment-variables.adoc
+++ b/docs/environment-variables.adoc
@@ -66,8 +66,15 @@ module java.base does not "opens java.lang" to unnamed module [...]
 ----
 
 The best way to prevent these warnings/errors, is to change the code under test, so this extension is no longer needed.
-The next best thing is to allow access to that specific package with `--add-opens=java.base/java.util=ALL-UNNAMED` (if you place JUnit Pioneer on the class path) or `--add-opens=java.base/java.util=org.junitpioneer` (if you place it on the module path).
+The next best thing is to allow access to that specific package:
 
+[source]
+----
+--add-opens java.base/java.util=$TARGET_MODULE
+--add-opens java.base/java.lang=$TARGET_MODULE
+----
+
+Where `$TARGET_MODULE` equals `ALL-UNNAMED` if you place JUnit Pioneer on the class path, or `org.junitpioneer` if you place JUnit Pioneer on the module path.
 These command line options need to be added to the JVM that executes the tests:
 
 * https://docs.gradle.org/current/dsl/org.gradle.api.tasks.testing.Test.html[Gradle]
