Fix JSON sources to convert to Java types (#654 / #664)
The initial implementation of the JSON sources for ParameterizedTest
was missing the functionality to map from JSON to more complex Java
types like List. This commit fixes that by using Jackson's
ObjectMapper and JavaType.

Closes: #654 
PR: #664

--- a/docs/json-argument-source.adoc
+++ b/docs/json-argument-source.adoc
@@ -79,6 +79,13 @@ This parametrized test will generate the following tests:
 * [1] Luke
 * [2] Yoda
 
+The extension will automatically map JSON types to their corresponding Java types, including arrays:
+
+[source,java,indent=0]
+----
+include::{json-demo}/[tag=inline_source_with_list]
+----
+
 === Multiple Argument Methods
 
 If the method has multiple arguments, each JSON object argument will be deconstructed to each of the method arguments.
