--- a/docs/system-properties.adoc
+++ b/docs/system-properties.adoc
@@ -5,7 +5,7 @@
 
 The `@ClearSystemProperty` and `@SetSystemProperty` annotations can be used to clear, respectively, set the values of system properties for a test execution.
 Both annotations work on the test method and class level, are repeatable, combinable, and inherited from higher-level containers.
-After the annotated method has been executed, the properties mentioned in the annotation will be restored to their original value or will be cleared if they didn't have one before.
+After the annotated method has been executed, the properties mentioned in the annotation will be restored to their original value or the value of the higher-level container, or will be cleared if they didn't have one before.
 Other system properties that are changed during the test, are *not* restored.
 
 For example, clearing a system property for a test execution can be done as follows:
@@ -30,12 +30,14 @@ include::{demo}[tag=systemproperty_using_set_and_clear]
 
 ----
 
-Note that class level configurations are overwritten by method level configurations:
+Note that class-level configurations are overwritten by method-level configurations:
 
 [source,java,indent=0]
 ----
 include::{demo}[tag=systemproperty_using_at_class_level]
 ----
+
+NOTE: Method-level configurations are visible in both `@BeforeEach` setup methods and `@AfterEach` teardown methods (see https://junit.org/junit5/docs/current/user-guide/#extensions-execution-order-overview[user code and extension code execution order]).
 
 NOTE: Since v1.7.0, a class-level configuration means that the specified system properties are cleared/set before and reset after each individual test in the annotated class.
 
